--- a/css/main.css
+++ b/css/main.css
@@ -4,39 +4,22 @@ html, body {
 }
 
 body {
-  display: table;
-  text-align: center;
-
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: monospace;
+  background-color: #000000;
   color: #ffffff;
-
-  background: url(../img/bg.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.filter {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  background: rgba(0, 0, 0, 0.2);
 }
 
 .content {
-  position: relative;
-  display: table-cell;
+  flex: 1;
   width: 100%;
-  vertical-align: middle;
+  text-align: center;
 }
 
 .name {
+  font-size: 36px;
   font-weight: 300;
   letter-spacing: 8px;
 }
@@ -57,7 +40,7 @@ body {
   width: 50px;
   height: 4px;
   top: 16px; /* 40px/2 - 4px */
-  background: rgba(150, 150, 150, 0.6);
+  background: rgba(256, 256, 256, 0.3);
 }
 
 .links:before {
@@ -87,19 +70,18 @@ body {
         height: 40px;
         line-height: 40px;
         font-size: 20px;
-
-        background: rgba(0, 0, 0, 0.4);
+        background: rgba(256, 256, 256, 0.4);
         color: #ffffff;
         -webkit-border-radius: 100%;
         -moz-border-radius: 100%;
         border-radius: 100%;
-
         -webkit-transition: all 0.3s ease;
         transition: all 0.3s ease;
       }
 
         .links ul li a:hover {
-          background: rgba(0, 0, 0, 1);
+          background: rgba(256, 256, 256, 1);
+          color: #000000;
         }
 
 .icon {
