--- a/css/main.css
+++ b/css/main.css
@@ -7,50 +7,39 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: monospace;
-  background-color: #000000;
+  font-family: 'Helvetica', sans-serif;
+  background-color: #2c2b30;
   color: #ffffff;
 }
 
 .content {
   flex: 1;
   width: 100%;
-  text-align: center;
+  max-width: 450px;
+  padding: 24px;
+  text-align: left;
+  border-left: 2px solid #beB9bd;
+}
+
+@media (max-width: 768px) {
+  .content {
+    text-align: center;
+    border-left: none;
+  }
 }
 
 .name {
+  margin: 0 0 12px;
   font-size: 36px;
   font-weight: 300;
-  letter-spacing: 8px;
+  letter-spacing: 6px;
 }
 
 .links {
-  position: relative;
-  display: inline-block;
+  display: block;
   width: auto;
   height: 40px;
   margin: 0 auto;
-}
-
-.links:before,
-.links:after {
-  position: absolute;
-  display: block;
-  content: '';
-  width: 50px;
-  height: 4px;
-  top: 16px; /* 40px/2 - 4px */
-  background: rgba(256, 256, 256, 0.3);
-}
-
-.links:before {
-  left: 0;
-  margin-left: -60px; /* 50px - 10px */
-}
-
-.links:after {
-  right: 0;
-  margin-right: -60px; /* 50px - 10px */
 }
 
   .links ul {
@@ -70,6 +59,7 @@ body {
         height: 40px;
         line-height: 40px;
         font-size: 20px;
+        text-align: center;
         background: rgba(256, 256, 256, 0.4);
         color: #ffffff;
         -webkit-border-radius: 100%;
@@ -81,14 +71,13 @@ body {
 
         .links ul li a:hover {
           background: rgba(256, 256, 256, 1);
-          color: #000000;
+          color: #2c2b30;
         }
 
-.icon {
-
-}
 
 .tagline {
+  margin: 0 0 24px;
   font-weight: 100;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+  color: #beB9bd;
 }
