--- a/css/main.css
+++ b/css/main.css
@@ -1,83 +1,65 @@
 html, body {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Helvetica', sans-serif;
-  background-color: #2c2b30;
-  color: #ffffff;
-}
-
-.content {
-  flex: 1;
-  width: 100%;
-  max-width: 450px;
-  padding: 24px;
-  text-align: left;
-  border-left: 2px solid #beB9bd;
-}
-
-@media (max-width: 768px) {
-  .content {
-    text-align: center;
-    border-left: none;
-  }
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 48px;
+  font-family: 'Times New Roman', serif;
 }
 
 .name {
-  margin: 0 0 12px;
+  margin: 0 0 6px;
   font-size: 36px;
-  font-weight: 300;
-  letter-spacing: 6px;
+  font-weight: 600;
 }
 
-.links {
-  display: block;
-  width: auto;
-  height: 40px;
-  margin: 0 auto;
+.links ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-  .links ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  .links ul li {
+    display: inline-block;
+    margin: 0 12px 0 0;
   }
 
-    .links ul li {
-      display: inline-block;
-      margin: 0 5px;
+    .links ul li a {
+      display: block;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      font-size: 24px;
+      text-align: center;
+      background: rgba(256, 256, 256, 0.4);
+      color: #000;
+      -webkit-border-radius: 100%;
+      -moz-border-radius: 100%;
+      border-radius: 100%;
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease;
     }
 
-      .links ul li a {
-        display: block;
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        font-size: 20px;
-        text-align: center;
-        background: rgba(256, 256, 256, 0.4);
-        color: #ffffff;
-        -webkit-border-radius: 100%;
-        -moz-border-radius: 100%;
-        border-radius: 100%;
-        -webkit-transition: all 0.3s ease;
-        transition: all 0.3s ease;
+      .links ul li a:hover {
+        background: rgba(256, 256, 256, 1);
+        color: #0000ff;
       }
-
-        .links ul li a:hover {
-          background: rgba(256, 256, 256, 1);
-          color: #2c2b30;
-        }
 
 
 .tagline {
-  margin: 0 0 24px;
-  font-weight: 100;
-  letter-spacing: 2px;
-  color: #beB9bd;
+  margin: 0 0 12px;
+  font-weight: 300;
 }
