--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,6 @@ a {
       line-height: 40px;
       font-size: 24px;
       text-align: center;
-      background: rgba(256, 256, 256, 0.4);
-      -webkit-border-radius: 100%;
-      -moz-border-radius: 100%;
-      border-radius: 100%;
-      -webkit-transition: all 0.3s ease;
-      transition: all 0.3s ease;
     }
 
     .links ul li img {
@@ -65,6 +59,7 @@ a {
       top: 6px;
       width: 30px;
       height: 30px;
+      border-radius: 6px;
     }
 
 
